# eval-methodology

./: .gitignore  analyze_bbq_gstudy.py  analyze_gstudy.py  bbq_irt_item_accuracy.csv  bbq_irt_item_bias.csv  bbq_irt_person_accuracy.csv  bbq_irt_person_bias.csv  bbq_mirt_item_results.csv  bbq_results.csv  efa_bbq.py  efa_items.py  eval.py  eval_bbq.py  eval_post.md  extract_responses.py  fit_bbq_irt.py  fit_irt.py  fit_mirt.py  fit_mirt_bbq.py  judge.py  load_bbq.py  load_data.py  main.py  mirt_bbq_results.csv  mirt_bbq_svi_losses.csv  pyproject.toml
results/: ability_estimates.csv  item_irt_results.csv  item_params.csv  mirt_item_results.csv  mirt_person_results.csv  mirt_svi_losses.csv  person_irt_results.csv  results.csv
