[project]
name = "eval-firstrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "arviz>=0.23.4",
    "datasets>=4.8.4",
    "inspect-ai>=0.3.211",
    "jax==0.7.2",
    "jaxlib==0.7.2",
    "matplotlib>=3.10.9",
    "numpyro==0.19.0",
    "pandas>=3.0.2",
]
